tests/golden/types/invalid_array_01.stderr
fregot (typecheck error):
  "invalid_array_01.rego" (line 8, column 3):
  Unification error:

    8|   array_big[_] > 0
         ^^^^^^^^^^^^^^^^

  Could not unify type string with number

fregot (typecheck error):
  "invalid_array_01.rego" (line 13, column 3):
  Unification error:

    13|   array_small[_] > 0
          ^^^^^^^^^^^^^^^^^^

  Could not unify type string with number

fregot (typecheck error):
  "invalid_array_01.rego" (line 20, column 3):
  Unification error:

    20|   set_string[_] > 0
          ^^^^^^^^^^^^^^^^^

  Could not unify type string|boolean with number
